update flow to check FA before IA and Action

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
-/.idea
-/.ipynb_checkpoints
-/.venv
+.idea
+.ipynb_checkpoints
+.venv
+__pycache__
+.DS_Store
 
 
 /results
 /execution_logs
 /notebooks
 /clean_workspace
+/executed_notebooks
 
 
 /execution_configs.csv
