--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ docker==7.1.0
 google-api-python-client==2.175.0
 protobuf==3.20.3
 pandas==2.3.1
-pydantic
+pydantic==2.11.7
 google-auth-httplib2
 google-auth-oauthlib
 ipykernel==6.30.1
-
+rich==14.1.0
